fixed nav title on smaller devices

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -204,6 +204,10 @@ a {
         transform: rotate(180deg);
         border-radius: 0%;
     }
+    
+    .title {
+        width: 100vw;
+    }
 }
 
 .auth-wrapper {
